--- a/themes/blist/layouts/partials/intro.html
+++ b/themes/blist/layouts/partials/intro.html
@@ -3,6 +3,7 @@
     <div>
       <h1 class="text-4xl font-bold mb-4">{{ .Site.Params.introTitle | safeHTML}}</h1>
       <p class="font-light text-lg">{{ .Site.Params.introSubtitle | safeHTML}}</p>
+      <p class="font-light text-lg">{{ .Site.Params.introSubtitle2 | safeHTML}}</p>
     </div>
     <img class="rounded-lg shadow-sm" src="{{ .Site.Params.introPhoto }}" alt="{{ .Site.Title }}" />
   </div>
